# electric-sheep-pen

./: LICENSE  README.md  copilot-instructions.md  eshp-skill.md  eshp_cli.py  eshp_parser.py  eshp_server.py  eshp_store.py  pyproject.toml
.github/: copilot-instructions.md
.github/skills/eshp--commit-and-dream/: SKILL.md
.github/skills/eshp--deep-dream/: SKILL.md
.github/skills/eshp--explain/: SKILL.md
.github/skills/eshp--plan/: SKILL.md
eshp/: agent-skills.eshp  architecture.eshp  cli.eshp  conventions.eshp  dev-workflow.eshp  diagnose-command.eshp  directory-support.eshp  edge-direction.eshp  file-format.eshp  graph-command.eshp  overview.eshp  parser.eshp  recall-semantics.eshp  rels-edges-commands.eshp  server.eshp  store.eshp  subgraph-command.eshp  summarise-command.eshp  sync-edge-bug.eshp  web-view.eshp
eshp/bugs/: server-path-slug-404.eshp  sync-edge-bug.eshp
eshp/commands/: diagnose-command.eshp  graph-command.eshp  recall-semantics.eshp  rels-edges-commands.eshp  summarise-command.eshp
eshp/design/: directory-support.eshp  edge-direction.eshp  file-format.eshp  memory-graph.eshp
eshp/dev/: conventions.eshp  dev-workflow.eshp  release.eshp  test-scenarios.eshp
eshp/features/: agent-skills.eshp  web-view.eshp
eshp/modules/: architecture.eshp  cli.eshp  parser.eshp  server.eshp  store.eshp
eshp/static/: index.html
skills/eshp--commit-and-dream/: SKILL.md
skills/eshp--deep-dream/: SKILL.md
skills/eshp--plan/: SKILL.md
tests/: test_cli.py  test_parser.py  test_scenarios.py  test_server.py  test_store.py
