[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eshp"
version = "0.1.0"
description = "Codebase-local agentic memory graph — plain-text .eshp files backed by SQLite"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "watchdog>=3.0",
]

[project.scripts]
eshp = "eshp_cli:cli"

[tool.hatch.build.targets.wheel]
sources = ["."]
include = ["eshp_cli.py", "eshp_parser.py", "eshp_store.py", "skills/**"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
